feat(monitoring): integrate monitoring_system for Prometheus metrics export (#91)
* build(cmake): add monitoring_system dependency

Add monitoring_system from kcenon ecosystem as optional dependency:
- Add monitoring_system to FetchContent in FindPacsSystem.cmake
- Add BRIDGE_BUILD_MONITORING option (default ON)
- Add PACS_BRIDGE_HAS_MONITORING_SYSTEM compile definition
- Update build summary to show monitoring status

Refs: #40, #86

* feat(monitoring): add bridge_metrics_collector for PACS Bridge metrics

Implement comprehensive metrics collection for PACS Bridge:
- HL7 message counters (received/sent/errors by message type)
- HL7 processing duration histograms
- MWL entry counters (created/updated/cancelled)
- MWL query duration histograms
- Queue metrics (depth, enqueued, delivered, failures, dead letters)
- Connection metrics (MLLP active/total, FHIR active/requests)
- System metrics (CPU seconds, memory bytes, open FDs)
- Prometheus text format export

The bridge_metrics_collector is a singleton that integrates with
monitoring_system when available (PACS_BRIDGE_HAS_MONITORING_SYSTEM).

Refs: #40, #87

* feat(monitoring): add /metrics endpoint to health_server

Extend health_server to support Prometheus metrics endpoint:
- Add enable_metrics_endpoint and metrics_path config options
- Add metrics_provider callback for custom metrics generation
- Add /metrics endpoint handler returning Prometheus text format
- Add metrics_url() getter and metrics_requests statistics

Usage:
```cpp
health_server server(checker, config);
server.set_metrics_provider([]() {
    return bridge_metrics_collector::instance().get_prometheus_metrics();
});
```

Refs: #40, #88

* docs(monitoring): add Grafana dashboard and Prometheus alerting rules

Add monitoring documentation and configuration files:
- Grafana dashboard template (pacs_bridge_dashboard.json)
  - Overview stats: message rate, connections, queue depth, error rate
  - HL7 message throughput and latency graphs
  - Queue metric

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,11 +219,13 @@ list(APPEND PACS_BRIDGE_HEADERS
 list(APPEND PACS_BRIDGE_SOURCES
     src/monitoring/health_checker.cpp
     src/monitoring/health_server.cpp
+    src/monitoring/bridge_metrics.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/monitoring/health_types.h
     include/pacs/bridge/monitoring/health_checker.h
     include/pacs/bridge/monitoring/health_server.h
+    include/pacs/bridge/monitoring/bridge_metrics.h
 )
 
 # Performance
@@ -429,6 +431,7 @@ message(STATUS "")
 message(STATUS "Features:")
 message(STATUS "  TLS Support:      ${PACS_BRIDGE_HAS_OPENSSL}")
 message(STATUS "  PACS System:      ${PACS_BRIDGE_HAS_PACS_SYSTEM}")
+message(STATUS "  Monitoring:       ${PACS_BRIDGE_HAS_MONITORING_SYSTEM}")
 message(STATUS "")
 message(STATUS "Install Prefix:     ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "========================================")
