feat(fhir): implement FHIR Subscription Manager (Issue #36)
Add FHIR R4 Subscription resource and manager for event-based
notifications when ImagingStudy becomes available or DiagnosticReport
is completed.

Features:
- Subscription resource with full CRUD operations
- Criteria parsing and matching (e.g., ImagingStudy?status=available)
- REST-hook channel type support
- In-memory subscription storage
- Subscription handler for FHIR server integration
- Thread-safe implementation with retry logic

Components:
- subscription_resource.h/cpp: FHIR Subscription resource implementation
- subscription_manager.h/cpp: Manager with notification delivery
- subscription_test.cpp: 27 unit tests covering all functionality

Note: HTTP client uses stub implementation. For production, inject a
real HTTP client via constructor (e.g., libcurl or Boost.Beast).

Closes #36

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,6 +281,8 @@ if(BRIDGE_BUILD_FHIR)
         src/fhir/patient_resource.cpp
         src/fhir/service_request_resource.cpp
         src/fhir/imaging_study_resource.cpp
+        src/fhir/subscription_resource.cpp
+        src/fhir/subscription_manager.cpp
         src/mapping/fhir_dicom_mapper.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
@@ -292,6 +294,8 @@ if(BRIDGE_BUILD_FHIR)
         include/pacs/bridge/fhir/patient_resource.h
         include/pacs/bridge/fhir/service_request_resource.h
         include/pacs/bridge/fhir/imaging_study_resource.h
+        include/pacs/bridge/fhir/subscription_resource.h
+        include/pacs/bridge/fhir/subscription_manager.h
         include/pacs/bridge/mapping/fhir_dicom_mapper.h
     )
 endif()
