feat(security): implement OAuth2/Smart-on-FHIR authentication (#103)
Implement OAuth2 client credentials flow and Smart-on-FHIR discovery
for EMR system authentication. This enables secure integration with
modern healthcare systems that require OAuth2-based authentication.

Key features:
- OAuth2 client with automatic token refresh and caching
- Thread-safe token management using shared_mutex
- Smart-on-FHIR configuration discovery
- Auth provider interface for pluggable authentication
- Basic HTTP authentication fallback support
- Comprehensive unit tests (37 test cases)

New files:
- include/pacs/bridge/security/oauth2_types.h
- include/pacs/bridge/security/oauth2_client.h
- include/pacs/bridge/security/auth_provider.h
- include/pacs/bridge/security/basic_auth_provider.h
- include/pacs/bridge/security/smart_configuration.h
- include/pacs/bridge/security/smart_discovery.h
- src/security/oauth2_client.cpp
- src/security/basic_auth_provider.cpp
- src/security/smart_discovery.cpp
- tests/oauth2_test.cpp

Closes #110, #111, #112, #113, #114

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,18 +198,27 @@ list(APPEND PACS_BRIDGE_HEADERS
 list(APPEND PACS_BRIDGE_SOURCES
     src/security/access_control.cpp
     src/security/audit_logger.cpp
+    src/security/basic_auth_provider.cpp
     src/security/input_validator.cpp
     src/security/log_sanitizer.cpp
+    src/security/oauth2_client.cpp
     src/security/rate_limiter.cpp
+    src/security/smart_discovery.cpp
     src/security/tls_context.cpp
     src/security/tls_socket.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/security/access_control.h
     include/pacs/bridge/security/audit_logger.h
+    include/pacs/bridge/security/auth_provider.h
+    include/pacs/bridge/security/basic_auth_provider.h
     include/pacs/bridge/security/input_validator.h
     include/pacs/bridge/security/log_sanitizer.h
+    include/pacs/bridge/security/oauth2_client.h
+    include/pacs/bridge/security/oauth2_types.h
     include/pacs/bridge/security/rate_limiter.h
+    include/pacs/bridge/security/smart_configuration.h
+    include/pacs/bridge/security/smart_discovery.h
     include/pacs/bridge/security/tls_context.h
     include/pacs/bridge/security/tls_socket.h
     include/pacs/bridge/security/tls_types.h
