feat(emr): add FHIR R4 client core infrastructure
Implements the foundation for EMR integration with FHIR R4 HTTP client:

- emr_types.h: Error codes (-1000 to -1019), HTTP types, configuration structs
- search_params.h: Fluent search parameter builder with URL encoding
- fhir_bundle.h: Bundle parsing, serialization, and transaction builder
- http_client_adapter.h: Abstract HTTP client interface for testing
- fhir_client.h: Main client interface with read/search/create/update/delete

Features:
- Connection pooling configuration
- Automatic retry with exponential backoff
- OAuth2/Basic authentication provider support
- FHIR resource parsing and metadata extraction
- Bundle pagination support
- Transaction and batch operations

Resolves #102

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -309,6 +309,21 @@ if(BRIDGE_BUILD_FHIR)
     )
 endif()
 
+# EMR Client Module (Phase 5) - FHIR R4 Client for external EMR systems
+list(APPEND PACS_BRIDGE_SOURCES
+    src/emr/emr_types.cpp
+    src/emr/fhir_bundle.cpp
+    src/emr/http_client_adapter.cpp
+    src/emr/fhir_client.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/emr/emr_types.h
+    include/pacs/bridge/emr/search_params.h
+    include/pacs/bridge/emr/fhir_bundle.h
+    include/pacs/bridge/emr/http_client_adapter.h
+    include/pacs/bridge/emr/fhir_client.h
+)
+
 # =============================================================================
 # Create Main Library
 # =============================================================================
