feat(config): implement EMR configuration module
Implement EMR integration configuration for PACS Bridge including:
- Connection settings (base_url, timeout, max_connections, verify_ssl)
- Authentication (OAuth2, Basic Auth, API Key, None)
- Feature flags (patient_lookup, result_posting, encounter_context)
- Retry settings with exponential backoff
- Cache settings for patient/encounter data
- Mapping configuration for identifiers

Key features:
- EMR vendor support (generic, epic, cerner)
- Environment variable substitution (${VAR_NAME})
- Sensible defaults for all settings
- Comprehensive validation with detailed error messages
- Integration with existing OAuth2 security types

This implements Issue #109 requirements:
- emr_config structure with all nested configurations
- Validation for each configuration section
- Default values for sensible operation
- 24 unit tests covering all functionality

Closes #109

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,12 +186,14 @@ list(APPEND PACS_BRIDGE_SOURCES
     src/config/config_loader.cpp
     src/config/config_manager.cpp
     src/config/admin_server.cpp
+    src/config/emr_config.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/config/bridge_config.h
     include/pacs/bridge/config/config_loader.h
     include/pacs/bridge/config/config_manager.h
     include/pacs/bridge/config/admin_server.h
+    include/pacs/bridge/config/emr_config.h
 )
 
 # Security
