--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -247,6 +247,7 @@ add_bridge_test(mllp_test "unit;mllp;transport")
 
 add_bridge_test(config_test "unit;config")
 add_bridge_test(config_manager_test "unit;config;hot-reload")
+add_bridge_test(emr_config_test "unit;config;emr;phase5")
 
 # =============================================================================
 # Security Tests
@@ -426,6 +427,7 @@ endif()
 message(STATUS "  - mllp_test")
 message(STATUS "  - config_test")
 message(STATUS "  - config_manager_test")
+message(STATUS "  - emr_config_test")
 message(STATUS "  - security_test")
 message(STATUS "  - oauth2_test")
 if(PACS_BRIDGE_HAS_OPENSSL)
