feat(emr): implement patient demographics query from EMR (#104)
Add patient lookup functionality for querying patient demographics
from external EMR systems via FHIR API.

Key components:
- patient_record.h: Patient data structure with DICOM conversion helpers
- patient_lookup.h: High-level patient query interface with caching
- patient_matcher.h: Patient matching and disambiguation algorithms
- fhir_patient_parser.cpp: FHIR Patient resource JSON parser
- patient_lookup.cpp: EMR patient lookup service implementation
- patient_matcher.cpp: Jaro-Winkler similarity and scoring logic

Features:
- MRN and identifier-based patient lookup
- Demographic search (name, birthdate, gender)
- Automatic disambiguation for multiple matches
- Thread-safe in-memory caching with TTL
- Negative caching for not-found results
- DICOM format conversion utilities

Closes #104

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,11 +312,16 @@ if(BRIDGE_BUILD_FHIR)
 endif()
 
 # EMR Client Module (Phase 5) - FHIR R4 Client for external EMR systems
+# See: https://github.com/kcenon/pacs_bridge/issues/102
+# See: https://github.com/kcenon/pacs_bridge/issues/104
 list(APPEND PACS_BRIDGE_SOURCES
     src/emr/emr_types.cpp
     src/emr/fhir_bundle.cpp
     src/emr/http_client_adapter.cpp
     src/emr/fhir_client.cpp
+    src/emr/patient_lookup.cpp
+    src/emr/fhir_patient_parser.cpp
+    src/emr/patient_matcher.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/emr_types.h
@@ -324,6 +329,9 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/fhir_bundle.h
     include/pacs/bridge/emr/http_client_adapter.h
     include/pacs/bridge/emr/fhir_client.h
+    include/pacs/bridge/emr/patient_record.h
+    include/pacs/bridge/emr/patient_lookup.h
+    include/pacs/bridge/emr/patient_matcher.h
 )
 
 # =============================================================================
