--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -395,11 +395,14 @@ if(BRIDGE_BUILD_FHIR)
 endif()
 
 # =============================================================================
-# Phase 5: EMR Client Tests (Issue #102)
+# Phase 5: EMR Client Tests (Issue #102, #104)
 # =============================================================================
 
-# FHIR R4 Client Tests
+# FHIR R4 Client Tests (Issue #102)
 add_gtest_test(fhir_client_test "unit;emr;fhir;phase5")
+
+# Patient Lookup Tests (Issue #104)
+add_gtest_test(patient_lookup_test "unit;emr;patient;phase5")
 
 # =============================================================================
 # Test Summary
@@ -461,5 +464,6 @@ endif()
 message(STATUS "")
 message(STATUS "Phase 5 EMR Client Tests:")
 message(STATUS "  - fhir_client_test")
+message(STATUS "  - patient_lookup_test")
 message(STATUS "==========================")
 message(STATUS "")
