feat(emr): add encounter context retrieval for EMR integration (#106)
Implement encounter/visit context retrieval from EMR to link imaging
studies with patient visits. This enables proper billing, clinical
context, and continuity of care.

Features:
- Encounter status and class enums with parsing
- Location and practitioner info structures
- encounter_info with visit number, participants, locations
- encounter_context_provider for FHIR queries
- Result caching with configurable TTL
- FHIR JSON parsing (when nlohmann/json available)

Test coverage includes:
- Error code and string tests
- Status/class enum parsing tests
- Data structure tests (location, practitioner, encounter_info)
- Provider interface tests (without FHIR client)
- JSON parsing tests (conditionally skipped if no nlohmann/json)

Closes #106, relates to #108

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,7 @@ endif()
 # See: https://github.com/kcenon/pacs_bridge/issues/102
 # See: https://github.com/kcenon/pacs_bridge/issues/104
 # See: https://github.com/kcenon/pacs_bridge/issues/105
+# See: https://github.com/kcenon/pacs_bridge/issues/106
 list(APPEND PACS_BRIDGE_SOURCES
     src/emr/emr_types.cpp
     src/emr/fhir_bundle.cpp
@@ -326,6 +327,7 @@ list(APPEND PACS_BRIDGE_SOURCES
     src/emr/result_poster.cpp
     src/emr/diagnostic_report_builder.cpp
     src/emr/result_tracker.cpp
+    src/emr/encounter_context.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/emr_types.h
@@ -339,6 +341,7 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/result_poster.h
     include/pacs/bridge/emr/diagnostic_report_builder.h
     include/pacs/bridge/emr/result_tracker.h
+    include/pacs/bridge/emr/encounter_context.h
 )
 
 # =============================================================================
