feat(emr): implement EMR adapter interface and tests (#107, #121)
Implement vendor-agnostic EMR adapter interface for multi-vendor EMR
integration support:

- Add emr_adapter.h with abstract interface for EMR operations
- Add generic_fhir_adapter as default FHIR R4 implementation
- Add adapter factory for vendor-specific adapter creation
- Support for Epic, Cerner (via generic fallback), and future vendors
- Add comprehensive unit tests (47 tests) covering:
  - Adapter error codes and messages
  - EMR vendor parsing
  - Configuration validation
  - Adapter features
  - Interface compliance
  - Move semantics
  - Vendor-specific configuration

Features:
- Patient lookup and search
- Result posting to EMR
- Encounter context retrieval
- Health check and connection management
- Statistics tracking

Closes #121
Related to #107, #108

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -316,6 +316,8 @@ endif()
 # See: https://github.com/kcenon/pacs_bridge/issues/104
 # See: https://github.com/kcenon/pacs_bridge/issues/105
 # See: https://github.com/kcenon/pacs_bridge/issues/106
+# See: https://github.com/kcenon/pacs_bridge/issues/107
+# See: https://github.com/kcenon/pacs_bridge/issues/121
 list(APPEND PACS_BRIDGE_SOURCES
     src/emr/emr_types.cpp
     src/emr/fhir_bundle.cpp
@@ -328,6 +330,8 @@ list(APPEND PACS_BRIDGE_SOURCES
     src/emr/diagnostic_report_builder.cpp
     src/emr/result_tracker.cpp
     src/emr/encounter_context.cpp
+    src/emr/emr_adapter.cpp
+    src/emr/adapters/generic_fhir_adapter.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/emr_types.h
@@ -342,6 +346,8 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/emr/diagnostic_report_builder.h
     include/pacs/bridge/emr/result_tracker.h
     include/pacs/bridge/emr/encounter_context.h
+    include/pacs/bridge/emr/emr_adapter.h
+    include/pacs/bridge/emr/adapters/generic_fhir_adapter.h
 )
 
 # =============================================================================
