fix(ci): stabilize HAPI FHIR container initialization in EMR tests
- Pin HAPI FHIR image to v7.6.0 instead of latest tag
- Use underscores in environment variable names for GitHub Actions
- Increase health check start period from 60s to 120s for CI
- Add JAVA_OPTS to control memory allocation
- Improve health check reliability with silent curl flags
- Extend health check timeout and retries for slow container startup

This addresses container initialization failures in GitHub Actions
where the HAPI FHIR service container failed to start properly.

Changes:
- .github/workflows/emr-tests.yml: Update service container config
- tests/docker-compose.test.yml: Match CI configuration for local testing

--- a/.github/workflows/emr-tests.yml
+++ b/.github/workflows/emr-tests.yml
@@ -156,21 +156,25 @@ jobs:
 
     services:
       # HAPI FHIR R4 Server for integration testing
+      # Use specific version for stability (latest can break CI)
       hapi-fhir:
-        image: hapiproject/hapi:latest
+        image: hapiproject/hapi:v7.6.0
         ports:
           - 8080:8080
         env:
-          hapi.fhir.server_address: http://localhost:8080/fhir
-          hapi.fhir.fhir_version: R4
-          hapi.fhir.allow_multiple_delete: true
-          hapi.fhir.validation.enabled: false
+          # Environment variables use underscores, HAPI converts to dots
+          hapi_fhir_server_address: http://localhost:8080/fhir
+          hapi_fhir_fhir_version: R4
+          hapi_fhir_allow_multiple_delete: "true"
+          hapi_fhir_validation_enabled: "false"
+          # Reduce startup memory requirements
+          JAVA_OPTS: -Xms256m -Xmx1024m
         options: >-
-          --health-cmd "curl -f http://localhost:8080/fhir/metadata || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
-          --health-start-period 60s
+          --health-cmd "curl -sf http://localhost:8080/fhir/metadata > /dev/null || exit 1"
+          --health-interval 15s
+          --health-timeout 10s
+          --health-retries 12
+          --health-start-period 120s
 
     steps:
     - name: Checkout pacs_bridge
