docs: remove production-ready claims from documentation
Project is under active development without production testing
or official release. Updated status indicators and descriptions
to accurately reflect current development state.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,7 +6,7 @@
 # This directory contains example configuration files:
 #   - config/config.yaml           : Complete reference configuration
 #   - config/config-minimal.yaml   : Minimal setup configuration
-#   - config/config-production.yaml: Production-ready configuration
+#   - config/config-production.yaml: Deployment configuration
 #
 # Note: Example executables will be added in future phases.
 # Current focus is on configuration examples for deployment.
