test(monitoring): add comprehensive monitoring integration tests
Add integration tests for the monitoring system covering:

- Prometheus format validation (counter, gauge, histogram)
- Prometheus label escaping
- Multi-threaded metric updates (concurrent counters, histograms)
- Component metric integration (HL7, MWL, queue, connection workflows)
- System metrics updates
- End-to-end monitoring workflows
- Metrics output consistency
- Disabled metrics no-op behavior

Tests verify thread-safety using condition variables and barrier
synchronization to ensure reliable concurrent metric updates.

Closes #90

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -370,6 +370,9 @@ add_integration_test(failover_test "integration;failover;phase2")
 # Stress Tests (high volume)
 add_integration_test(stress_test "integration;stress;phase2" 600)
 
+# Monitoring Integration Tests (Issue #90)
+add_integration_test(monitoring_integration_test "integration;monitoring;metrics;phase4" 180)
+
 # =============================================================================
 # Phase 3: FHIR Gateway Tests (Issue #31)
 # =============================================================================
@@ -470,6 +473,9 @@ if(PACS_BRIDGE_HAS_SQLITE)
 endif()
 message(STATUS "  - failover_test")
 message(STATUS "  - stress_test")
+message(STATUS "")
+message(STATUS "Phase 4 Integration Tests:")
+message(STATUS "  - monitoring_integration_test")
 if(BRIDGE_BUILD_FHIR)
     message(STATUS "")
     message(STATUS "Phase 3 FHIR Tests:")
