test(monitoring): add Prometheus endpoint integration tests
- Add HTTP server lifecycle tests (start/stop, double start)
- Add metrics endpoint tests with custom path support
- Add health endpoint tests (liveness, readiness, deep)
- Add concurrent requests handling tests
- Add server statistics tracking tests
- Add URL generation tests
- Use TCP sockets for real HTTP request/response testing

Tests for #88

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -275,6 +275,10 @@ add_bridge_test(health_check_test "unit;monitoring")
 # These tests work with the internal implementation regardless of monitoring_system availability
 add_gtest_test(bridge_metrics_test "unit;monitoring;metrics")
 
+# Prometheus Endpoint Tests (Issue #88)
+# Tests HTTP server, /metrics endpoint, and health endpoints via TCP
+add_bridge_test(prometheus_endpoint_test "unit;monitoring;prometheus;phase4")
+
 # =============================================================================
 # Performance Tests
 # =============================================================================
