feat(tracing): add distributed tracing infrastructure
Add core tracing infrastructure for distributed tracing support:
- trace_manager: centralized trace management singleton
- span_wrapper: RAII wrapper for automatic span lifecycle management
- tracing_types: W3C trace context and span data types

Features:
- Create root and child spans with proper parent-child relationships
- W3C traceparent header format support (parse and generate)
- Span attributes, status, and events
- Conditional compilation for standalone builds
- Integration hooks for monitoring_system exporters

Closes #147
Ref #144

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,19 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/monitoring/bridge_metrics.h
 )
 
+# Distributed Tracing
+# See: https://github.com/kcenon/pacs_bridge/issues/144
+list(APPEND PACS_BRIDGE_SOURCES
+    src/tracing/tracing_types.cpp
+    src/tracing/trace_manager.cpp
+    src/tracing/span_wrapper.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/tracing/tracing_types.h
+    include/pacs/bridge/tracing/trace_manager.h
+    include/pacs/bridge/tracing/span_wrapper.h
+)
+
 # Performance
 list(APPEND PACS_BRIDGE_SOURCES
     src/performance/benchmark_runner.cpp
