feat(tracing): add trace context propagation and PACS spans
Add trace context propagation infrastructure:
- trace_propagation.h/cpp: utilities for embedding trace context in HL7
  messages and propagating to DICOM operations
- Support multiple propagation strategies (Z-segment, MSH field)
- Thread-local context storage with RAII guard

Add tracing spans to:
- hl7_to_dicom: HL7 to DICOM mapping operations
- pacs_update: MWL client operations (add, update, cancel, query)

Refs #149

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,11 +245,13 @@ list(APPEND PACS_BRIDGE_SOURCES
     src/tracing/tracing_types.cpp
     src/tracing/trace_manager.cpp
     src/tracing/span_wrapper.cpp
+    src/tracing/trace_propagation.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/tracing/tracing_types.h
     include/pacs/bridge/tracing/trace_manager.h
     include/pacs/bridge/tracing/span_wrapper.h
+    include/pacs/bridge/tracing/trace_propagation.h
 )
 
 # Performance
