feat(tracing): add distributed tracing support with W3C Trace Context (#151)
* feat(tracing): add distributed tracing infrastructure

Add core tracing infrastructure for distributed tracing support:
- trace_manager: centralized trace management singleton
- span_wrapper: RAII wrapper for automatic span lifecycle management
- tracing_types: W3C trace context and span data types

Features:
- Create root and child spans with proper parent-child relationships
- W3C traceparent header format support (parse and generate)
- Span attributes, status, and events
- Conditional compilation for standalone builds
- Integration hooks for monitoring_system exporters

Closes #147
Ref #144

* feat(tracing): add spans for MLLP and HL7 processing

Add tracing spans for:
- mllp_receive: MLLP message reception with port, address, session info
- hl7_parse: HL7 parsing with message size, segment/field counts
- hl7_validate: validation with pass/fail status, error/warning counts
- hl7_route: message routing with route matching and timing

Update trace_manager.h to include span_wrapper.h for complete
type definition when returning spans by value.

Refs #148

* feat(tracing): add trace context propagation and PACS spans

Add trace context propagation infrastructure:
- trace_propagation.h/cpp: utilities for embedding trace context in HL7
  messages and propagating to DICOM operations
- Support multiple propagation strategies (Z-segment, MSH field)
- Thread-local context storage with RAII guard

Add tracing spans to:
- hl7_to_dicom: HL7 to DICOM mapping operations
- pacs_update: MWL client operations (add, update, cancel, query)

Refs #149

* feat(tracing): add trace exporter factory with batch support (#150)

Implement trace exporter infrastructure for distributed tracing:

- Add trace_exporter interface with export_spans, flush, shutdown methods
- Implement exporter_factory for creating exporters based on configuration
- Support multiple export formats: Jaeger, Zipkin, OTLP (gRPC/HTTP)
- Add n

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,23 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/monitoring/bridge_metrics.h
 )
 
+# Distributed Tracing
+# See: https://github.com/kcenon/pacs_bridge/issues/144
+list(APPEND PACS_BRIDGE_SOURCES
+    src/tracing/tracing_types.cpp
+    src/tracing/trace_manager.cpp
+    src/tracing/span_wrapper.cpp
+    src/tracing/trace_propagation.cpp
+    src/tracing/exporter_factory.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/tracing/tracing_types.h
+    include/pacs/bridge/tracing/trace_manager.h
+    include/pacs/bridge/tracing/span_wrapper.h
+    include/pacs/bridge/tracing/trace_propagation.h
+    include/pacs/bridge/tracing/exporter_factory.h
+)
+
 # Performance
 list(APPEND PACS_BRIDGE_SOURCES
     src/performance/benchmark_runner.cpp
